# text2sql-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
text2sql_mcp/: __init__.py  server.py
